# gifmaker

./: .gitignore  LICENSE  pyproject.toml
gifmaker/: gifmaker.py  service.py
